--- a/app/templates/partials/jobs/status.html
+++ b/app/templates/partials/jobs/status.html
@@ -77,7 +77,7 @@
   </p>
   {% if job.status == 'sending limits exceeded'%}
     <p class="usa-error-message">
-        Notify cannot send these messages because you have reached a limit. You can only send {{ current_service.message_limit|format_thousands }} messages per day and {{ 250000|format_thousands }} messages in total.
+        Flexion Messaging cannot send these messages because you have reached a limit. You can only send {{ current_service.message_limit|format_thousands }} messages per day and {{ 250000|format_thousands }} messages in total.
     </p>
     <p class="usa-error-message">
         Upload this spreadsheet again tomorrow or contact the Flexion Messaging team to raise the limit.
