--- a/app/templates/partials/tour.html
+++ b/app/templates/partials/tour.html
@@ -28,7 +28,7 @@
       </div>
       <div class="grid-col-10">
         <p class="usa-body">
-          Notify delivers the message
+          Flexion Messaging delivers the message
         </p>
         {% if help == '3' %}
           <a class="usa-link" href='{{ url_for(".go_to_dashboard_after_tour", service_id=current_service.id, example_template_id=template.id) }}'>
