--- a/app/templates/views/about/about.html
+++ b/app/templates/views/about/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% set page_title = "About Notify" %}
+{% set page_title = "About Flexion Messaging" %}
 {% block per_page_title %}
 {{page_title}}
 {% endblock %}
