--- a/app/templates/views/about/security.html
+++ b/app/templates/views/about/security.html
@@ -59,7 +59,7 @@
   <h3>Data retention</h3>
   <p>
     Any data uploads that have recipient data are held for seven calendar days; personally identifiable information
-    (PII) is never stored in Notify’s database.
+    (PII) is never stored in Flexion Messaging’s database.
   </p>
   <h2>Multi-Factor Authentication</h2>
   <p>
