--- a/app/templates/views/accessibility_statement.html
+++ b/app/templates/views/accessibility_statement.html
@@ -56,11 +56,11 @@
     <li>choosing the date and time to send a message may be hard for some screen reader users</li>
     <li>screen reader users may find it expand or collapse groups of checkboxes</li>
     <li>one page links to a PDF document that is not fully accessible</li>
-    <!--<li>the Notify status page has several accessibility issues</li> -->
+    <!--<li>the Flexion Messaging status page has several accessibility issues</li> -->
   </ul>
 
   <!-- <p>
-    We also know that the emails Notify sends are not fully accessible. The JAWS and NVDA screen readers announce extra spaces in emails when you view them in Microsoft Outlook.
+    We also know that the emails Flexion Messaging sends are not fully accessible. The JAWS and NVDA screen readers announce extra spaces in emails when you view them in Microsoft Outlook.
   </p> -->
 
   <h2 class="font-body-lg" id="feedback-and-contact-information">Feedback and contact information</h2>
@@ -100,7 +100,7 @@
   <h3 class="font-body-lg" id="non-compliance">Non compliance with the accessibility regulations</h3>
 
   <p>
-    The following content on the Notify website is not compliant with the WCAG version 2.1 AA standard:
+    The following content on the Flexion Messaging website is not compliant with the WCAG version 2.1 AA standard:
   </p>
 
   <ul class="usa-list usa-list--bullet">
@@ -167,7 +167,7 @@
   </h3>
 
   <p>
-    The following content on the Notify status page is not compliant with the WCAG version 2.1 AA standard:
+    The following content on the Flexion Messaging status page is not compliant with the WCAG version 2.1 AA standard:
   </p>
 
   <ul class="usa-list">
@@ -191,7 +191,7 @@
   </h2>
 
   <p>
-    The parts of the website used to send text messages, emails and letters were last tested in February 2021. The emails we send out, the web pages users see when they are sent a file by Notify and a sample letter PDF were last tested on 11th March 2019. Both tests were carried out by DAC.
+    The parts of the website used to send text messages, emails and letters were last tested in February 2021. The emails we send out, the web pages users see when they are sent a file by Flexion Messaging and a sample letter PDF were last tested on 11th March 2019. Both tests were carried out by DAC.
   </p>
 
   <p>
