--- a/app/templates/views/contact.html
+++ b/app/templates/views/contact.html
@@ -11,6 +11,6 @@
       aria-label="contact us at tts-notify@gsa.gov">tts-notify@gsa.gov</a>.</p>
   <p>If you are a current Flexion Messaging partner and have technical issues or questions, we are available
     at <a href="mailto:notify-support@gsa.gov"
-      aria-label="Email Notify for technical questions at notify-support@gsa.gov">notify-support@gsa.gov</a></p>
+      aria-label="Email Flexion Messaging for technical questions at notify-support@gsa.gov">notify-support@gsa.gov</a></p>
 </section>
 {% endblock %}
