--- a/app/templates/views/email-not-received.html
+++ b/app/templates/views/email-not-received.html
@@ -11,7 +11,7 @@
   <div class="grid-col-8">
     <h1 class="font-body-2xl margin-bottom-3">Resend email link</h1>
 
-    <p>Emails sometimes take a few minutes to arrive. If you do not receive an email link, Notify can send you a new one.</p>
+    <p>Emails sometimes take a few minutes to arrive. If you do not receive an email link, Flexion Messaging can send you a new one.</p>
     <p>
       {{ usaButton({
         "element": "a",
