--- a/app/templates/views/features/text-messages.html
+++ b/app/templates/views/features/text-messages.html
@@ -9,13 +9,13 @@
 {% block content_column_content %}
 
   <h1 class="font-body-2xl">Text messages</h1>
-  <p>Send thousands of free text messages to US phone numbers with Notify.</p>
+  <p>Send thousands of free text messages to US phone numbers with Flexion Messaging.</p>
   {% if not current_user.is_authenticated %}
-  <p><a class="usa-link" href="{{ url_for('main.register') }}">Create an account</a> and try Notify for yourself.</p>
+  <p><a class="usa-link" href="{{ url_for('main.register') }}">Create an account</a> and try Flexion Messaging for yourself.</p>
   {% endif %}
 
   <h2 class="heading font-heading-lg">Features</h2>
-  <p>Notify makes it easy to:</p>
+  <p>Flexion Messaging makes it easy to:</p>
   <ul class="list list-bullet">
     <li>create reusable text message templates</li>
     <li>personalize the content of your texts</li>
@@ -24,11 +24,11 @@
 
   <h3 class="font-body-md margin-bottom-2" id="receive">Receive text messages</h3>
   <p>Let people send messages to your service or reply to your texts.</p>
-  <p>You can see and reply to the messages you receive when you sign in to Notify. If you’re using our API, you can set up your own automated processes to manage replies.</p>
+  <p>You can see and reply to the messages you receive when you sign in to Flexion Messaging. If you’re using our API, you can set up your own automated processes to manage replies.</p>
   <p><a class="usa-link" href="{{ url_for('.support') }}">Contact us</a> to request a unique number for text message replies.</p> -->
 
   <h3 class="font-body-md margin-bottom-2" id="sender">Show people who your texts are from</h3>
-  <p>When you send a text message with Notify, the sender name tells people who it’s from.</p>
+  <p>When you send a text message with Flexion Messaging, the sender name tells people who it’s from.</p>
 
   <p>To change the text message sender from the default of ‘Flexion Messaging’:</p>
 
