--- a/app/templates/views/how-to/edit-and-format-messages.html
+++ b/app/templates/views/how-to/edit-and-format-messages.html
@@ -34,11 +34,11 @@
     <li>horizontal rules</li>
   </ul>
 
-  <p class="usa-body">Notify does not allow bold, italics, subheadings, underlined text or different fonts. This is because they can make it harder for users to read what you’ve written.</p> -->
+  <p class="usa-body">Flexion Messaging does not allow bold, italics, subheadings, underlined text or different fonts. This is because they can make it harder for users to read what you’ve written.</p> -->
 
   <h2 class="font-heading-lg" id="links">Add links</h2>
 
-  <p class="usa-body">When composing a text message, write URLs in full and Notify will convert them into links for you.</p>
+  <p class="usa-body">When composing a text message, write URLs in full and Flexion Messaging will convert them into links for you.</p>
 
   <p class="usa-body">You cannot convert text into a link. <!-- Research shows that people like to check a URL looks genuine before clicking the link in an email. This is hard to do if the URL is hidden behind clickable link text.--></p>
 
@@ -69,7 +69,7 @@
 
   <ul class="list list-bullet">
     <li>manually fill in the placeholders yourself</li>
-    <li>upload a list of personal details and let Notify do it for you</li>
+    <li>upload a list of personal details and let Flexion Messaging do it for you</li>
   </ul>
 
   <p class="usa-body">If you upload a list, the column names need to match the placeholders in your template.</p>
@@ -89,7 +89,7 @@
 
   <ul class="list list-bullet">
     <li>do this yourself</li>
-    <li>upload a list of personal details and let Notify do it for you</li>
+    <li>upload a list of personal details and let Flexion Messaging do it for you</li>
   </ul>
 
   <p class="usa-body">If you upload a list, the column names need to match the optional content in your template.</p>
