--- a/app/templates/views/how-to/index.html
+++ b/app/templates/views/how-to/index.html
@@ -10,7 +10,7 @@
 {% block content_column_content %}
 <h1 class="font-body-2xl margin-bottom-3">How to</h1>
 
-<p>Notify allows you to easily create templates for messages for your recipients. You can customize messages to encourage
+<p>Flexion Messaging allows you to easily create templates for messages for your recipients. You can customize messages to encourage
 your recipient to manage their benefits and increase follow-through.</p>
 <p>Below we explain how to:</p>
 
@@ -34,7 +34,7 @@ your recipient to manage their benefits and increase follow-through.</p>
 <p>When composing a text message, links to websites or online applications can help your recipient respond quickly.</p>
 
 <ul class="list list-bullet">
-  <li>Write URLs in full and Notify will convert them into links for you. Note that you cannot hyperlink text in Notify
+  <li>Write URLs in full and Flexion Messaging will convert them into links for you. Note that you cannot hyperlink text in Flexion Messaging
   messages.</li>
   <li>For link click tracking, you can consider adding campaign parameters to URLs.</li>
   <li>All links should point to a government domain.</li>
@@ -60,7 +60,7 @@ your recipient to manage their benefits and increase follow-through.</p>
 <h3>To personalize your content</h3>
 <ol class="list">
   <li>Add a placeholder to your content by placing two parenthesis around the personalized elements.</li>
-  <li>You can manually enter the personalized content or you can upload a spreadsheet with the details and let Notify do the
+  <li>You can manually enter the personalized content or you can upload a spreadsheet with the details and let Flexion Messaging do the
   work for you.</li>
 </ol>
 
@@ -79,7 +79,7 @@ all or part of the message contingent upon specific criteria associated with the
 <h3>To add conditional content</h3>
 <ol class="list">
   <li>Use two parenthesis and ?? to define the conditional content.</li>
-  <li>You can manually enter the conditional content or you can upload a spreadsheet with the personal details and let Notify
+  <li>You can manually enter the conditional content or you can upload a spreadsheet with the personal details and let Flexion Messaging
   do the work for you.</li>
 </ol>
 
