--- a/app/templates/views/join-notify.html
+++ b/app/templates/views/join-notify.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% set page_title = "Join Notify" %}
+{% set page_title = "Join Flexion Messaging" %}
 
 {% block per_page_title %}{{page_title}}{% endblock %}
 
@@ -144,7 +144,7 @@
   "position": "b-a3",
   },
   {
-  "heading": "Can we use API integrations with Notify?",
+  "heading": "Can we use API integrations with Flexion Messaging?",
   "p_text": "While public API integrations are not yet available, we are working on enabling these. If you're looking
   for this feature <a href='/contact'>we want to hear from you</a>.",
   "position": "b-a4",
@@ -171,7 +171,7 @@
   "position": "b-a7",
   },
   {
-  "heading": "What information does Notify provide about message delivery?",
+  "heading": "What information does Flexion Messaging provide about message delivery?",
   "p_text": "Flexion Messaging shares back information about message delivery that we receive from individual mobile phone
   carriers. Carriers can only provide information about whether a message was successfully delivered to a specific phone
   number (not a person).
