--- a/app/templates/views/organizations/organization/index.html
+++ b/app/templates/views/organizations/organization/index.html
@@ -238,7 +238,7 @@
     </h3>
     <div id="what-is-service-content" class="usa-accordion__content usa-prose" hidden>
       <p>
-        When you join Notify, you're added to a service. This is your organization's workspace for sending text messages and emails. Within your service, you can:
+        When you join Flexion Messaging, you're added to a service. This is your organization's workspace for sending text messages and emails. Within your service, you can:
       </p>
       <ol class="usa-list">
         <li>Create and edit message templates</li>
