--- a/app/templates/views/pricing/index.html
+++ b/app/templates/views/pricing/index.html
@@ -62,7 +62,7 @@ part.</p>
 <p>Personalization can change the length of messages. For example, if you are personalizing with a first name, Fred is
 significantly shorter than Alexander. When you are evaluating how long a message is, you need to consider variations in
 message length based on personalization.</p>
-<p>Before you send messages, Notify will let you know how many messages you are sending, the number of parts you are using,
+<p>Before you send messages, Flexion Messaging will let you know how many messages you are sending, the number of parts you are using,
 and the number of parts you’ll have left.</p>
 
 <h3 class="font-body-lg" id="symbols">Signs and symbols</h3>
@@ -75,7 +75,7 @@ and the number of parts you’ll have left.</p>
 <p>Using them can increase the cost of sending text messages.</p>
 
 <h3 class="font-body-lg" id="accents">Accented characters and non-romanized scripts</h3>
-<p>Notify can handle a wide range of different languages and scripts. However, occasionally some phone carriers may
+<p>Flexion Messaging can handle a wide range of different languages and scripts. However, occasionally some phone carriers may
 struggle to display special characters or non-romanized scripts. (Languages such as Arabic, Chinese, Japanese, Korean,
 and Russian use non-romanized scripts with different characters.) Best practices encourage communication in the
 recipient’s preferred language, but we are aware that, rarely, a phone carrier will not be able to handle the message.</p>
