--- a/app/templates/views/privacy.html
+++ b/app/templates/views/privacy.html
@@ -100,7 +100,7 @@
 
     <h3 class="font-body-lg" id="essential-cookies">Essential cookies</h2>
     <p>
-      Essential cookies keep your information secure while you use Notify. We do not need to ask permission to use them.
+      Essential cookies keep your information secure while you use Flexion Messaging. We do not need to ask permission to use them.
     </p>
     <table class="usa-table usa-table--borderless">
         <caption class="usa-sr-only">Essential cookies</caption>
@@ -139,7 +139,7 @@
 
     <h3 class="font-body-lg" id="analytics-cookies">Analytics cookies</h2>
     <p>
-      We also use Google Analytics to collect data about how you use Notify. This information helps us to improve our service.
+      We also use Google Analytics to collect data about how you use Flexion Messaging. This information helps us to improve our service.
     </p>
     <p>
       Google is not allowed to use or share our analytics data with anyone.
@@ -149,8 +149,8 @@
     </p>
     <ul class="usa-list usa-list--bullet">
       <li>how you got to Flexion Messaging</li>
-      <li>the pages you visit on Notify and how long you spend on them</li>
-      <li>any errors you see while using Notify</li>
+      <li>the pages you visit on Flexion Messaging and how long you spend on them</li>
+      <li>any errors you see while using Flexion Messaging</li>
     </ul>
     <table class="usa-table usa-table--borderless">
         <caption class="usa-sr-only">Google Analytics cookies</caption>
@@ -167,7 +167,7 @@
                   _ga
                 </td>
                 <td width="50%">
-                  Checks if you’ve visited Notify before. This helps us count how many people visit our site.
+                  Checks if you’ve visited Flexion Messaging before. This helps us count how many people visit our site.
                 </td>
                 <td>
                   2 years
@@ -178,7 +178,7 @@
                   _gid
                 </td>
                 <td width="50%">
-                  Checks if you’ve visited Notify before. This helps us count how many people visit our site.
+                  Checks if you’ve visited Flexion Messaging before. This helps us count how many people visit our site.
                 </td>
                 <td>
                   24 hours
