--- a/app/templates/views/signin.html
+++ b/app/templates/views/signin.html
@@ -18,11 +18,11 @@
       <h1 class="font-body-2xl margin-bottom-3">You need to sign in again</h1>
       {% if other_device %}
         <p>
-          We signed you out because you logged in to Notify on another device.
+          We signed you out because you logged in to Flexion Messaging on another device.
         </p>
       {% else %}
         <p>
-          We signed you out because you have not used Notify for a while.
+          We signed you out because you have not used Flexion Messaging for a while.
         </p>
       {% endif %}
       <a class="usa-link usa-button" href="{{ initial_signin_url }}">Sign in with Login.gov</a>
