--- a/app/templates/views/templates/template.html
+++ b/app/templates/views/templates/template.html
@@ -17,7 +17,7 @@
       {% call banner_wrapper(type='dangerous', subhead='Are you sure you want to hide all personalized and conditional content after sending for increased privacy protection?') %}
         <ul class="list list-bullet">
           <li>
-            You will not be able to see personalized content in Notify for this template
+            You will not be able to see personalized content in Flexion Messaging for this template
           </li>
           <li>
             You cannot undo this
