--- a/app/templates/views/terms-of-use.html
+++ b/app/templates/views/terms-of-use.html
@@ -13,7 +13,7 @@
     These terms apply to your service’s use of Flexion Messaging. You must be the service manager to accept them.
   </p>
 
-  <h2 class="font-body-lg" id="when-using-notify">When using Notify</h2>
+  <h2 class="font-body-lg" id="when-using-notify">When using Flexion Messaging</h2>
   <p>You must:</p>
   <ul class="list list-bullet">
     <li>ensure your organization has reviewed and approved any messages you will send</li>
@@ -21,7 +21,7 @@
     <li>keep your API keys secure</li>
     <li>get the right levels of consent (to send messages and to use data)</li>
     <li>not send unsolicited messages, only ones related to official government services and information</li>
-    <li>check that the data you add to Notify is accurate and complies with data protection legislation</li>
+    <li>check that the data you add to Flexion Messaging is accurate and complies with data protection legislation</li>
   </ul>
   <p>If you do not keep to these terms, we might have to stop sending your messages.</p>
 
@@ -32,8 +32,8 @@
     <li>give you one month’s notice by email if we change our terms of use or delivery providers</li>
   </ul>
 
-  <h2 class="font-body-lg" id="leaving-notify">Leaving Notify</h2>
-  <p>You can leave Notify at any time. Just <a class="usa-link" href="{{url_for('.support')}}">contact us</a> and we’ll close your account.</p>
-  <p>When you leave Notify, all your data will be deleted.</p>
+  <h2 class="font-body-lg" id="leaving-notify">Leaving Flexion Messaging</h2>
+  <p>You can leave Flexion Messaging at any time. Just <a class="usa-link" href="{{url_for('.support')}}">contact us</a> and we’ll close your account.</p>
+  <p>When you leave Flexion Messaging, all your data will be deleted.</p>
 
 {% endblock %}
