--- a/app/templates/views/trial-mode.html
+++ b/app/templates/views/trial-mode.html
@@ -19,7 +19,7 @@
   <h2 class="font-body-lg">Before going Live</h2>
   <p>Before you request to make your service live so you can send messages to clients:</p>
   <ul class="list list-bullet">
-    <li>Add examples of the messages you want to send into Notify.</li>
+    <li>Add examples of the messages you want to send into Flexion Messaging.</li>
     <li>Update your settings so you’re ready to send and receive messages.</li>
     <li>Review your Terms of Use in the Memorandum of Understanding.</li>
   </ul>
