--- a/app/templates/views/verification-not-received.html
+++ b/app/templates/views/verification-not-received.html
@@ -11,7 +11,7 @@
   <div class="grid-col-8">
     <h1 class="font-body-2xl margin-bottom-3">Resend security code</h1>
 
-    <p>Text messages sometimes take a few minutes to arrive. If you do not receive a security code, Notify can send you a new one.</p>
+    <p>Text messages sometimes take a few minutes to arrive. If you do not receive a security code, Flexion Messaging can send you a new one.</p>
     <p>
       {{ usaButton({
         "element": "a",
