--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -33,10 +33,8 @@
       <div class="display-flex flex-align-center flex-justify width-full">
         <div class="usa-logo display-flex flex-align-center flex-justify" id="-logo">
           <div class="logo-img display-flex">
-            <a href="/">
-              <span class="usa-sr-only">Notify.gov logo</span>
-              <img src="{{ (asset_path | default('/static')) + 'images/notify-logo.svg' }}" alt="Notify.gov logo"
-                class="usa-flag-logo margin-right-1">
+            <a href="/" class="text-bold text-ink font-sans-lg text-no-underline">
+              Flexion Messaging
             </a>
           </div>
           {% if navigation %}
