--- a/app/templates/error/technical_difficulties.html
+++ b/app/templates/error/technical_difficulties.html
@@ -10,7 +10,7 @@
       <h1 class="font-body-3xl line-height-sans-2 text-bold">
         There's currently a technical issue.
       </h1>
-      <p class="font-body-lg line-height-sans-2">Thank you for your patience while we work on it. Notify will be back soon.</p>
+      <p class="font-body-lg line-height-sans-2">Thank you for your patience while we work on it. Flexion Messaging will be back soon.</p>
     </div>
   </div>
   </div>
