--- a/app/templates/views/api/callbacks/delivery-status-callback.html
+++ b/app/templates/views/api/callbacks/delivery-status-callback.html
@@ -20,7 +20,7 @@
       {{ page_header('Callbacks for delivery receipts') }}
 
       <p>
-        When you send an email or text message, we can tell you if Notify was able to deliver it.
+        When you send an email or text message, we can tell you if Flexion Messaging was able to deliver it.
         Read the Callbacks section of our <a class="usa-link" href="{{ url_for('main.documentation') }}">API documentation</a> for more information.
       </p>
 
