--- a/app/templates/views/api/callbacks/received-text-messages-callback.html
+++ b/app/templates/views/api/callbacks/received-text-messages-callback.html
@@ -17,7 +17,7 @@
   <div class="grid-row">
     <div class="grid-col-10">
       <p>
-        When you receive a text message in Notify, we can forward it to your system.
+        When you receive a text message in Flexion Messaging, we can forward it to your system.
         Check the <a class="usa-link" href="{{ url_for('.callbacks') }}"> callback documentation </a> for more information.
       </p>
 
