--- a/app/templates/views/api/index.html
+++ b/app/templates/views/api/index.html
@@ -41,7 +41,7 @@
           When you send messages via the API they’ll appear here.
         </p>
         <p class="api-notifications-item__meta">
-          Notify deletes messages after 7 days.
+          Flexion Messaging deletes messages after 7 days.
         </p>
       </div>
     {% endif %}
@@ -92,7 +92,7 @@
           </p>
         {% endif %}
         <p class="api-notifications-item__meta">
-          Notify deletes messages after 7 days.
+          Flexion Messaging deletes messages after 7 days.
         </p>
       </div>
     {% endif %}
