--- a/app/templates/views/message-status.html
+++ b/app/templates/views/message-status.html
@@ -9,15 +9,15 @@
 
   <h1 class="font-body-2xl margin-bottom-3">Delivery status</h1>
 
-  <p>Notify starts sending your text messages immediately. Each message is sent to its cell phone carrier, which attempts
+  <p>Flexion Messaging starts sending your text messages immediately. Each message is sent to its cell phone carrier, which attempts
   delivery to the recipient. This process is often almost instantaneous, but can sometimes take a while if a phone is
   unavailable. The carrier will continue to try to deliver the message for up to 72 hours.</p>
-  <p>The Notify dashboard provides a high-level view of the number of messages Sent, Pending, Delivered, and Failed. The
+  <p>The Flexion Messaging dashboard provides a high-level view of the number of messages Sent, Pending, Delivered, and Failed. The
   dashboard data starts to update about five minutes after a message is sent and will continue to update for four hours.</p>
   <p>Delivery statuses reflect delivery to a specific <em>cell phone number</em>, not to a <em>person</em>. No status can confirm that a
   specific person actually received or read the message.</p>
 
-  <!-- <p>If you’re using the Notify API, read our <a class="usa-link" href="{{ url_for('.documentation') }}">documentation</a> for a list of API statuses.<p>
+  <!-- <p>If you’re using the Flexion Messaging API, read our <a class="usa-link" href="{{ url_for('.documentation') }}">documentation</a> for a list of API statuses.<p>
 
   <h2 id="email-statuses" class="font-heading-lg">Emails</h2>
   <div class="margin-bottom-3">
@@ -28,11 +28,11 @@
       caption_visible=False
     ) %}
       {% for message_status, description in [
-        ('Sending', 'Notify has sent the message to the provider. The provider will try to deliver the message to the recipient for up to 72 hours. Notify is waiting for delivery information.'),
-        ('Delivered', 'The message was successfully delivered. Notify cannot tell you if a user has opened or read a message.'),
+        ('Sending', 'Flexion Messaging has sent the message to the provider. The provider will try to deliver the message to the recipient for up to 72 hours. Flexion Messaging is waiting for delivery information.'),
+        ('Delivered', 'The message was successfully delivered. Flexion Messaging cannot tell you if a user has opened or read a message.'),
         ('Email address does not exist', 'The provider could not deliver the message because the email address was wrong. You should remove these email addresses from your database.'),
         ('Inbox not accepting messages right now', 'The provider could not deliver the message. This can happen when the recipient\'s inbox is full or their anti-spam filter rejects your email. Check your content does not look like spam before you try to send the message again.'),
-        ('Technical failure', 'Your message was not sent because there was a problem between Notify and the provider. You’ll have to try sending your messages again.'),
+        ('Technical failure', 'Your message was not sent because there was a problem between Flexion Messaging and the provider. You’ll have to try sending your messages again.'),
       ] %}
         {% call row() %}
           {{ text_field(message_status) }}
@@ -43,10 +43,10 @@
   </div>
 
   <h3 id="spam" class="font-heading-md">Spam</h3>
-  <p>If an email is marked as spam, Notify receives a ‘complaint’ from the email provider. We’ll contact you if we receive a complaint about any of your emails. When this happens you should remove the recipient’s email address from your list.</p>
+  <p>If an email is marked as spam, Flexion Messaging receives a ‘complaint’ from the email provider. We’ll contact you if we receive a complaint about any of your emails. When this happens you should remove the recipient’s email address from your list.</p>
 
   <h3 id="open-rates" class="font-heading-md">Open rates and click-throughs</h3>
-  <p>Notify cannot tell you if your users open an email or click on the links in an email. We do not track open rates and click-throughs because there are privacy issues. Tracking emails without asking permission from users could breach General Data Protection Regulations (GDPR).</p> -->
+  <p>Flexion Messaging cannot tell you if your users open an email or click on the links in an email. We do not track open rates and click-throughs because there are privacy issues. Tracking emails without asking permission from users could breach General Data Protection Regulations (GDPR).</p> -->
 
   <h2 id="text-message-statuses" class="font-heading-lg">Text messages</h2>
   <div class="margin-bottom-8 table-overflow-x-auto">
@@ -60,10 +60,10 @@
         ('Scheduled', 'The total number of messages that have been scheduled to be sent at some future time.'),
         ('Canceled', 'Messages that were created and scheduled, but canceled prior to Sending.'),
         ('Total', 'The total number of messages that have been sent during the specified time.'),
-        ('Pending', 'Notify has sent the message to the provider. The provider will try to deliver the message to the recipient for up to 72 hours. "Pending" indicates that Notify is waiting for delivery information.'),
-        ('Delivered', 'The message was successfully delivered. Notify cannot tell you if a user has opened or read a message.'),
+        ('Pending', 'Flexion Messaging has sent the message to the provider. The provider will try to deliver the message to the recipient for up to 72 hours. "Pending" indicates that Flexion Messaging is waiting for delivery information.'),
+        ('Delivered', 'The message was successfully delivered. Flexion Messaging cannot tell you if a user has opened or read a message.'),
         ('Failed', 'The message could not be delivered.'),
-        ('Process error / Delivery not attempted', 'If you receive a large number of process errors, please contact the Notify team.'),
+        ('Process error / Delivery not attempted', 'If you receive a large number of process errors, please contact the Flexion Messaging team.'),
         ] %}
         {% call row() %}
           {{ text_field(message_status) }}
@@ -73,9 +73,9 @@
     {% endcall %}
   </div>
   <h2 class="font-heading-lg">About carrier statuses</h2>
-  <p>Sometimes Notify receives more detailed information from the carriers on the status of messages, and these can be found
+  <p>Sometimes Flexion Messaging receives more detailed information from the carriers on the status of messages, and these can be found
   in the downloadable reports. Not all carriers provide the same level of detail regarding delivery and some delivery
-  statutes have a slight variation in word choice. Notify includes this information in the reports to provide you as much
+  statutes have a slight variation in word choice. Flexion Messaging includes this information in the reports to provide you as much
   detail as possible. Remember, for security purposes, detailed information is only available for seven days after a
   message has been sent.</p>
 
