--- a/app/templates/views/service-settings/set-inbound-sms.html
+++ b/app/templates/views/service-settings/set-inbound-sms.html
@@ -46,7 +46,7 @@
           You can still send text messages from a sender name if you need to, but users will not be able to reply to those messages.
         </p>
         <p>
-          You can see and reply to the messages you receive when you sign in to Notify, or get them using the API.
+          You can see and reply to the messages you receive when you sign in to Flexion Messaging, or get them using the API.
         </p>
         <p>
           It does not cost you anything to receive text messages. Users will pay their standard text message rate.
