--- a/app/templates/views/support/index.html
+++ b/app/templates/views/support/index.html
@@ -11,7 +11,7 @@
 <div class="usa-prose margin-bottom-10">
 
   <h1 class="font-body-2xl margin-bottom-3">Contact us</h1>
-  <p>Notify is designed to be easy to use.</p>
+  <p>Flexion Messaging is designed to be easy to use.</p>
   <ul class="list list-bullet">
     <li>For information on personalization, see <a href={{ url_for("main.how_to") }}>How to</a>.</li>
     <li>For help interpreting delivery reports, see <a href={{ url_for("main.message_status") }}>Delivery status</a>.</li>
