--- a/app/templates/views/two-factor-email.html
+++ b/app/templates/views/two-factor-email.html
@@ -10,8 +10,8 @@
 <div class="grid-row">
   <div class="grid-col-8">
     <h1 class="font-body-2xl margin-bottom-3">{{ title }}</h1>
-    <p>We’ve emailed you a link to sign in to Notify.</p>
-    <p>Clicking the link will open Notify in a new browser window, so you can close this one.</p>
+    <p>We’ve emailed you a link to sign in to Flexion Messaging.</p>
+    <p>Clicking the link will open Flexion Messaging in a new browser window, so you can close this one.</p>
     {{ page_footer(
       secondary_link=url_for('main.email_not_received', next=redirect_url),
       secondary_link_text='Not received an email?'
