--- a/app/templates/views/using-notify.html
+++ b/app/templates/views/using-notify.html
@@ -2,7 +2,7 @@
 {% from "components/sub-navigation.html" import sub_navigation %}
 
 {% block per_page_title %}
-  Using Notify
+  Using Flexion Messaging
 {% endblock %}
 
 {% block maincolumn_content %}
@@ -13,7 +13,7 @@
   </div>
   <div class="grid-col-8">
 
-    <h1 class="font-body-2xl margin-bottom-3">Using Notify</h1>
+    <h1 class="font-body-2xl margin-bottom-3">Using Flexion Messaging</h1>
 
     <p>The information on this page has moved.</p>
 
