--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -21,7 +21,7 @@
             <img class="usa-identifier__logo-img" src="{{ (asset_path | default('/static')) + 'images/gsa-logo.svg' }}"  alt="GSA Logo" role="img" width="48" height="48">
           </a></div>
         <section class="usa-identifier__identity" aria-label="Agency description">
-          <p class="usa-identifier__identity-domain">beta.notify.gov</p>
+          <p class="usa-identifier__identity-domain">solution.flexion.us/messaging</p>
           <p class="usa-identifier__identity-disclaimer">An official website of the <a href="https://gsa.gov">General Services Administration</a></p>
         </section>
       </div>
@@ -72,10 +72,10 @@
         </div>
         <ul class="usa-identifier__required-links-list">
           <li class="usa-identifier__required-links-item">
-            <a href="https://github.com/gsa/notifications-admin" class="usa-identifier__required-link">Notify.gov Admin repo</a>
+            <a href="https://github.com/flexion/notifications-admin" class="usa-identifier__required-link">Flexion Messaging Admin repo</a>
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="https://github.com/gsa/notifications-api" class="usa-identifier__required-link">Notify.gov API repo</a>
+            <a href="https://github.com/flexion/notifications-api" class="usa-identifier__required-link">Flexion Messaging API repo</a>
           </li>
         </ul>
 
