update notify name to flexion

--- a/app/templates/views/about/security.html
+++ b/app/templates/views/about/security.html
@@ -45,8 +45,8 @@
       AWS SNS </a> for sending SMS
     messages.
   </p>
-  <p>For more information about the Flexion Messaging infrastructure, contact us at <a
-      href="mailto:notify-support@gsa.gov">notify-support@gsa.gov</a>.</p>
+  <p>For more information about the Flexion Messaging infrastructure, <a
+      href="https://solution.flexion.us/contact/">contact us</a>.</p>
   <h2>Data</h2>
   <p>
     On Flexion Messaging, data is encrypted both in transit and at rest. To send a message, agencies upload a spreadsheet of
