--- a/app/templates/views/contact.html
+++ b/app/templates/views/contact.html
@@ -7,10 +7,7 @@
 {% block content_column_content %}
 <section class="usa-prose">
   <h1>{{page_title}}</h1>
-  <p>For any questions, contact us at <a href="mailto:tts-notify@gsa.gov"
-      aria-label="contact us at tts-notify@gsa.gov">tts-notify@gsa.gov</a>.</p>
-  <p>If you are a current Flexion Messaging partner and have technical issues or questions, we are available
-    at <a href="mailto:notify-support@gsa.gov"
-      aria-label="Email Flexion Messaging for technical questions at notify-support@gsa.gov">notify-support@gsa.gov</a></p>
+  <p>For any questions or technical support, please visit our <a href="https://solution.flexion.us/contact/"
+      aria-label="Contact Flexion Messaging">contact page</a>.</p>
 </section>
 {% endblock %}
