--- a/app/templates/views/service-settings.html
+++ b/app/templates/views/service-settings.html
@@ -173,7 +173,7 @@
       <p>
         {% if current_user.has_permissions(ServicePermission.MANAGE_SERVICE) %}
           To remove these restrictions, you can send us a
-          <a class="usa-link" href="mailto:notify-support@gsa.gov">request to go live</a>.
+          <a class="usa-link" href="https://solution.flexion.us/contact/">request to go live</a>.
         {% else %}
           Your service manager can ask to have these restrictions removed.
         {% endif %}
