--- a/app/templates/views/support/index.html
+++ b/app/templates/views/support/index.html
@@ -17,7 +17,7 @@
     <li>For help interpreting delivery reports, see <a href={{ url_for("main.message_status") }}>Delivery status</a>.</li>
   </ul>
 
-  <p>If you have other questions, we are available at <a class="usa-link" href="mailto:notify-support@gsa.gov">notify-support@gsa.gov</a>.</p>
+  <p>If you have other questions, please <a class="usa-link" href="https://solution.flexion.us/contact/">contact us</a>.</p>
 
   <p>You can expect a response within one business day.</p>
 
