--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -99,13 +99,13 @@
 
     {% block footer %}
 
-      {% if current_service and current_service.research_mode %}
+      {# {% if current_service and current_service.research_mode %}
         {% set meta_suffix = 'Built by the <a href="https://tts.gsa.gov/" class="usa-link">Technology Transformation Services</a><span id="research-mode" class="research-mode">research mode</span>' %}
       {% else %}
         {% set commit_hash = ", Latest version: " + config['COMMIT_HASH'] %}
         {% set long_link = '<a href="https://tts.gsa.gov/" class="usa-link">Technology Transformation Services</a>' %}
         {% set meta_suffix = "Built by the " + long_link + commit_hash %}
-      {% endif %}
+      {% endif %} #}
 
       {% include "components/footer.html" %}
 
