--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -14,81 +14,12 @@
       </div>
     </div>
   </div>
-  <div class="usa-identifier site-identifier">
-    <section class="usa-identifier__section usa-identifier__section--masthead" aria-label="Agency identifier,,,,,,">
-      <div class="usa-identifier__container">
-        <div class="usa-identifier__logos"><a href="javascript:void(0);" class="usa-identifier__logo">
-            <img class="usa-identifier__logo-img" src="{{ (asset_path | default('/static')) + 'images/gsa-logo.svg' }}"  alt="GSA Logo" role="img" width="48" height="48">
-          </a></div>
-        <section class="usa-identifier__identity" aria-label="Agency description">
-          <p class="usa-identifier__identity-domain">solution.flexion.us/messaging</p>
-          <p class="usa-identifier__identity-disclaimer">An official website of the <a href="https://gsa.gov">General Services Administration</a></p>
-        </section>
-      </div>
-    </section>
-    <nav class="usa-identifier__section usa-identifier__section--required-links" aria-label="Important links">
-      <div class="usa-identifier__container">
-        <ul class="usa-identifier__required-links-list">
-          <li class="usa-identifier__required-links-item">
-            <a href="https://www.gsa.gov/about-us" class="usa-identifier__required-link">About GSA</a>
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="/studio" class="usa-identifier__required-link">About the Public Benefits Studio</a>
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="https://www.gsa.gov/website-information/accessibility-aids"
-              class="usa-identifier__required-link">Accessibility support</a>
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="https://www.gsa.gov/reference/freedom-of-information-act-foia"
-              class="usa-identifier__required-link">FOIA requests</a>
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="https://www.gsa.gov/reference/civil-rights-programs/notification-and-federal-employee-antidiscrimination-and-retaliation-act-of-2002"
-              class="usa-identifier__required-link">No FEAR Act data</a>
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="https://www.gsaig.gov/" class="usa-identifier__required-link">Office of the Inspector General</a>
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="https://www.gsa.gov/reference/reports/budget-performance"
-              class="usa-identifier__required-link">Performance reports</a>
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="/acceptable-use-policy" class="usa-identifier__required-link">Acceptable use policy</a>
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="https://www.gsa.gov/website-information/website-policies"
-              class="usa-identifier__required-link">Privacy policy</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <section class="usa-identifier__section"
-      aria-label="Github Repos">
-      <div class="usa-identifier__container">
-        <div class="usa-identifier__required-links-item">
-          Find us on Github:
-        </div>
-        <ul class="usa-identifier__required-links-list">
-          <li class="usa-identifier__required-links-item">
-            <a href="https://github.com/flexion/notifications-admin" class="usa-identifier__required-link">Flexion Messaging Admin repo</a>
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="https://github.com/flexion/notifications-api" class="usa-identifier__required-link">Flexion Messaging API repo</a>
-          </li>
-        </ul>
-
-      </div>
-    </section>
-
-    <section class="usa-identifier__section usa-identifier__section--usagov"
-      aria-label="Government information and services">
-      <div class="usa-identifier__container">
+  <div class="usa-identifier site-identifier text-center">
+    <section class="usa-identifier__section usa-identifier__section--usagov" aria-label="Copyright notice">
+      <div class="usa-identifier__container margin-top-2">
         <div class="usa-identifier__usagov-description">
-          Looking for U.S. government information and services?
+          © 2025 Flexion Inc. All rights reserved. Flexion® is a registered trademark of Flexion Inc. See our Privacy Policy.
         </div>
-        <a href="https://www.usa.gov/" class="usa-link">Visit USA.gov</a>
       </div>
     </section>
   </div>
